# simple-cmake-project

./: CMakeLists.txt  README.md  main.c
examples/: CMakeLists.txt
examples/include/: ex1.h
examples/src/: ex1.c
tests/examples/: CMakeLists.txt
tests/examples/include/: ex1_test.h  ex2_test.h
tests/examples/src/: ex1_test.c  ex2_test.c
